modificaciones al HTML

--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TecnoPolos</title>
     <link rel="stylesheet" href="./CSS/index.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
       <div class="container__header">
         <p class="header__logo">TecnoPolos.com</p>
         <nav class="header__nav">
-          <a href="#">Quienes Somos</a>
-          <a href="#">Tienda</a>
-          <a href="#">Contactanos</a>
+          <a href="#" class="header__nav-quienes-somos">Quienes Somos</a>
+          <a href="#" class="header__nav-tienda">Tienda</a>
+          <a href="#" class="header__nav-contactanos">Contactanos</a>
         </nav>
       </div>
     </header>
 
     <main class="hero">
       <h1 class="titulo_principal">
-        Una Moda Para Ti <br />
+        Los mejores Productos para ti <br />
         CODER
       </h1>
       <p>
@@ -38,38 +41,39 @@
     <section id="section_container-productos">
       <div class="container_productos">
         <h2 class="titulo_secundario">Nuestros productos</h2>
+        <div>
+          <div class="carta">
+            <h3 class="subtitulo">Polos para Programadores</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis in
+              id porro quam, mollitia necessitatibus? Ut, sed esse. Rem optio
+              iure architecto omnis quidem officia fugiat eius quos doloremque
+              pariatur?
+            </p>
+            <button class="button-info">+INFO</button>
+          </div>
 
-        <div class="container_productos-carta">
-          <h3 class="subtitulo">Polos para Programadores</h3>
-          <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis in id
-            porro quam, mollitia necessitatibus? Ut, sed esse. Rem optio iure
-            architecto omnis quidem officia fugiat eius quos doloremque
-            pariatur?
-          </p>
-          <button class="button-info">+INFO</button>
-        </div>
+          <div class="carta">
+            <h3 class="subtitulo">Tazas para Programadores</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
+              impedit architecto voluptate aperiam tenetur provident laudantium
+              aspernatur. Autem, pariatur? Facilis laudantium ut sint similique
+              quis, nisi illum accusantium deleniti magni.
+            </p>
+            <button class="button-info">+INFO</button>
+          </div>
 
-        <div class="container_productos-carta">
-          <h3 class="subtitulo">Tazas para Programadores</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-            impedit architecto voluptate aperiam tenetur provident laudantium
-            aspernatur. Autem, pariatur? Facilis laudantium ut sint similique
-            quis, nisi illum accusantium deleniti magni.
-          </p>
-          <button class="button-info">+INFO</button>
-        </div>
-
-        <div class="container_productos-carta">
-          <h3 class="subtitulo">Gorras para Programadores</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
-            quidem, enim minus eos pariatur neque nam blanditiis aut quasi
-            obcaecati aliquam voluptas beatae inventore repellat maxime
-            laboriosam distinctio, sequi rerum?
-          </p>
-          <button class="button-info">+INFO</button>
+          <div class="carta">
+            <h3 class="subtitulo">Gorras para Programadores</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
+              quidem, enim minus eos pariatur neque nam blanditiis aut quasi
+              obcaecati aliquam voluptas beatae inventore repellat maxime
+              laboriosam distinctio, sequi rerum?
+            </p>
+            <button class="button-info">+INFO</button>
+          </div>
         </div>
       </div>
     </section>
