versión Movil primera parte

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </header>
 
-    <main class="hero">
+    <section id="hero">
       <h1 class="titulo_principal">
         Los mejores Productos para ti <br />
         CODER
@@ -36,10 +36,10 @@
         productos personalizados y pensados para ti <br />
         Amante del Código!
       </p>
-    </main>
+    </section>
 
     <section id="section_container-productos">
-      <div class="container_productos">
+      <div class="container__productos">
         <h2 class="titulo_secundario">Nuestros productos</h2>
         <div>
           <div class="carta">
@@ -65,7 +65,7 @@
           </div>
 
           <div class="carta">
-            <h3 class="subtitulo">Gorras para Programadores</h3>
+            <h3 class="subtitulo">Todo para Programadores</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
               quidem, enim minus eos pariatur neque nam blanditiis aut quasi
@@ -79,13 +79,38 @@
     </section>
 
     <footer>
-      <div>
+      <div class="div__footer">
         <h3 class="subtitulo">Nuestras redes</h3>
-        <ul>
-          <li>
-            <img src="" alt="" />
-          </li>
-        </ul>
+        <nav>
+          <ul class="listado">
+            <li>
+              <a href="https://www.youtube.com/channel/UCldxleFH_e6dSSLrIerekmA" target="_blank" rel="nooperner noreferrer"/>
+                <img src="https://i.postimg.cc/dtPYcvbM/youtube.png" 
+                alt="YouTube" width="32px" height="32px">
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/jhanccr" target="_blank" rel="nooperner noreferrer"/>
+                <img src="https://i.postimg.cc/5NBMxTJX/github.png" alt="GitHub" width="32px" height="32px">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/jhan-carlos-caicedo-reluz-70266016b/" target="_blank" rel="nooperner noreferrer" />
+                <img src="https://i.postimg.cc/J7BLFtdc/linkedin.png" alt="LinkedIn" width="32px" height="32px">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/jhancaicedoreluz/" target="_blank" rel="nooperner noreferrer"/>
+                <img src="https://i.postimg.cc/sfJtqS4W/instagram.png" alt="Instagram" width="32px" height="32px">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.facebook.com/jhancarlos.caicedoreluz"  target="_blank" rel="nooperner noreferrer">
+                <img src="https://i.postimg.cc/7YHyZXZX/facebook.png" alt="GitHub" width="32px" height="32px" >
+              </a>
+            </li>
+          </ul>
+        </nav>
         <p>Copyright Jhan Carlos Caicedo</p>
       </div>
     </footer>
