Agregando modificaciones mobile y vista web por @media

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <div class="container__header">
         <p class="header__logo">TecnoPolos.com</p>
         <nav class="header__nav">
-          <a href="#" class="header__nav-quienes-somos">Quienes Somos</a>
-          <a href="#" class="header__nav-tienda">Tienda</a>
-          <a href="#" class="header__nav-contactanos">Contactanos</a>
+          <a href="#hero" class="header__nav-quienes-somos">Quienes Somos</a>
+          <a href="#section_container-productos" class="header__nav-tienda">Tienda</a>
+          <a href="#nuestras_redes" class="header__nav-contactanos">Contactanos</a>
         </nav>
       </div>
     </header>
@@ -41,7 +41,7 @@
     <section id="section_container-productos">
       <div class="container__productos">
         <h2 class="titulo_secundario">Nuestros productos</h2>
-        <div>
+        <div class="productos">
           <div class="carta">
             <h3 class="subtitulo">Polos para Programadores</h3>
             <p>
@@ -78,39 +78,41 @@
       </div>
     </section>
 
-    <footer>
+    <footer id="nuestras_redes">
       <div class="div__footer">
         <h3 class="subtitulo">Nuestras redes</h3>
-        <nav>
-          <ul class="listado">
-            <li>
-              <a href="https://www.youtube.com/channel/UCldxleFH_e6dSSLrIerekmA" target="_blank" rel="nooperner noreferrer"/>
-                <img src="https://i.postimg.cc/dtPYcvbM/youtube.png" 
-                alt="YouTube" width="32px" height="32px">
-              </a>
-            </li>
-            <li>
-              <a href="https://github.com/jhanccr" target="_blank" rel="nooperner noreferrer"/>
-                <img src="https://i.postimg.cc/5NBMxTJX/github.png" alt="GitHub" width="32px" height="32px">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.linkedin.com/in/jhan-carlos-caicedo-reluz-70266016b/" target="_blank" rel="nooperner noreferrer" />
-                <img src="https://i.postimg.cc/J7BLFtdc/linkedin.png" alt="LinkedIn" width="32px" height="32px">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/jhancaicedoreluz/" target="_blank" rel="nooperner noreferrer"/>
-                <img src="https://i.postimg.cc/sfJtqS4W/instagram.png" alt="Instagram" width="32px" height="32px">
-              </a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/jhancarlos.caicedoreluz"  target="_blank" rel="nooperner noreferrer">
-                <img src="https://i.postimg.cc/7YHyZXZX/facebook.png" alt="GitHub" width="32px" height="32px" >
-              </a>
-            </li>
-          </ul>
-        </nav>
+        <div class="div__footer-div">
+          <nav>
+            <ul class="listado">
+              <li>
+                <a href="https://www.youtube.com/channel/UCldxleFH_e6dSSLrIerekmA" target="_blank" rel="nooperner noreferrer"/>
+                  <img src="https://i.postimg.cc/dtPYcvbM/youtube.png" 
+                  alt="YouTube" width="32px" height="32px">
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/jhanccr" target="_blank" rel="nooperner noreferrer"/>
+                  <img src="https://i.postimg.cc/5NBMxTJX/github.png" alt="GitHub" width="32px" height="32px">
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/jhan-carlos-caicedo-reluz-70266016b/" target="_blank" rel="nooperner noreferrer" />
+                  <img src="https://i.postimg.cc/J7BLFtdc/linkedin.png" alt="LinkedIn" width="32px" height="32px">
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/jhancaicedoreluz/" target="_blank" rel="nooperner noreferrer"/>
+                  <img src="https://i.postimg.cc/sfJtqS4W/instagram.png" alt="Instagram" width="32px" height="32px">
+                </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/jhancarlos.caicedoreluz"  target="_blank" rel="nooperner noreferrer">
+                  <img src="https://i.postimg.cc/7YHyZXZX/facebook.png" alt="GitHub" width="32px" height="32px" >
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
         <p>Copyright Jhan Carlos Caicedo</p>
       </div>
     </footer>
