--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="header__nav">
           <a href="#hero" class="header__nav-quienes-somos">Quienes Somos</a>
           <a href="#section_container-productos" class="header__nav-tienda">Tienda</a>
-          <a href="#nuestras_redes" class="header__nav-contactanos">Contactanos</a>
+          <a href="#nuestras_redes" class="header__nav-contactanos">Contáctanos</a>
         </nav>
       </div>
     </header>
@@ -65,7 +65,7 @@
           </div>
 
           <div class="carta">
-            <h3 class="subtitulo">Todo para Programadores</h3>
+            <h3 class="subtitulo">Otros</h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
               quidem, enim minus eos pariatur neque nam blanditiis aut quasi
