cambio de fotos y comentarios

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./CSS/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -28,9 +28,9 @@
         CODER
       </h1>
       <p>
-        En nuestro marketplace, encontraras diseños relacionados al <br />arte
-        de la programación, somos fabricantes mostrando <br />los mejores
-        productos personalizados y pensados para ti <br />
+        En nuestro marketplace, encontraras diseños relacionados al<br />arte
+        de la programación, somos fabricantes mostrando <br/>los mejores
+        productos personalizados y pensados para ti <br/>
         Amante del Código!
       </p>
     </section>
@@ -42,10 +42,9 @@
           <div class="carta">
             <h3 class="subtitulo">Polos para Programadores</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quis in
-              id porro quam, mollitia necessitatibus? Ut, sed esse. Rem optio
-              iure architecto omnis quidem officia fugiat eius quos doloremque
-              pariatur?
+              Polos estilo PROGRAMADORES TI ☑️ <br/>
+              Ten tu polo con el logo que más te identifica 
+              Personalizados desde S/.49.90
             </p>
             <button class="button-info">+INFO</button>
           </div>
