cambio de fotos y comentarios 2

--- a/index.html
+++ b/index.html
@@ -40,35 +40,30 @@
         <h2 class="titulo_secundario">Nuestros productos</h2>
         <div class="productos">
           <div class="carta">
-            <h3 class="subtitulo">Polos para Programadores</h3>
+            <h3 class="subtitulo" >POLOS PROGRAMADORES TI ✅</h3>
             <p>
-              Polos estilo PROGRAMADORES TI ☑️ <br/>
               Ten tu polo con el logo que más te identifica 
               Personalizados desde S/.49.90
             </p>
-            <button class="button-info">+INFO</button>
+            <button class="button-info">VER +</button>
           </div>
 
           <div class="carta">
-            <h3 class="subtitulo">Tazas para Programadores</h3>
+            <h3 class="subtitulo">TAZAS PROGRAMADORES TI ✅</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas
-              impedit architecto voluptate aperiam tenetur provident laudantium
-              aspernatur. Autem, pariatur? Facilis laudantium ut sint similique
-              quis, nisi illum accusantium deleniti magni.
+              Ten tazas con el logo que más te identifica 
+              Personalizados desde S/.29.90
             </p>
-            <button class="button-info">+INFO</button>
+            <button class="button-info">VER +</button>
           </div>
 
           <div class="carta">
-            <h3 class="subtitulo">Otros</h3>
+            <h3 class="subtitulo">OTROS PRODUCTOS TI ✅</h3>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,
-              quidem, enim minus eos pariatur neque nam blanditiis aut quasi
-              obcaecati aliquam voluptas beatae inventore repellat maxime
-              laboriosam distinctio, sequi rerum?
+              Ten otros productos con el logo que más te identifica 
+              Personalizados desde S/.19.90
             </p>
-            <button class="button-info">+INFO</button>
+            <button class="button-info">VER +</button>
           </div>
         </div>
       </div>
