se agrega las condiciones de la versión web en media

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
     <section id="section_suscribete">
       <div class="container-sub">
         <div class="content-sub">
-            <h2>Suscríbete a nuestro boletín</h2>
-            <p>Sin promesas de spam, ¡solo nuestras últimas noticias y obsequios!</p>
+            <h2>Suscríbete a nuestra página</h2>
+            <p>Obten los mejores descuentos, ¡solo nuestras últimas noticias y obsequios!</p>
             <form action="#">
                 <input type="email" class="campo" placeholder="Introduce tu correo electrónico" required>
                 <input type="submit" value="Suscribir" class="btn-sub">
