se agregan cambios finales de comentarios

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <figure class="testimonios">
       <figcaption>
         <blockquote>
-          <p>Los productos son de muy buena calidad, a excelentes precios!!! animense a comprar</p>
+          <p>Los productos son de muy buena calidad a excelentes precios.Animense a comprar</p>
         </blockquote>
         <h3>Sideral</h3>
         <h4>Lima, San Isidro</h4>
