--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 
     <section id="hero">
       <h1 class="titulo_principal">
-        Los mejores Productos para ti <br />
-        CODER
+        Los mejores productos para ti <br />
+        CODER 💻 
       </h1>
       <p>
         En nuestro marketplace, encontrarás diseños relacionados al<br />arte
@@ -113,7 +113,7 @@
                 <input type="submit" value="Suscribir" class="btn-sub">
             </form>
         </div>
-    </div>
+      </div>
     </section>
     
     <section class="testimonials" id="testimonials">
@@ -209,6 +209,7 @@
           </li>
         </ul>
       </nav>
+      <p> Copyright 2022 - Jhan Caicedo</p>
     </footer>
     <script src="./js/index.js" type="module"></script>
   </body>
