--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <nav>
         <ul class="card__footer-nav-list">
           <li class="card__footer-nav-item">      
-            <a href="https://www.youtube.com/channel/UCldxleFH_e6dSSLrIerekmA" target="_blank" rel="nooperner noreferrer"/>
+            <a href="https://www.youtube.com/channel/UCldxleFH_e6dSSLrIerekmA" target="_blank" rel="nooperner noreferrer">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
                 class="bi bi-youtube card__footer-nav-img" viewBox="0 0 16 16">
                 <path
@@ -127,7 +127,7 @@
             </a>
           </li>
           <li class="card__footer-nav-item">
-            <a href="https://github.com/jhanccr" target="_blank" rel="nooperner noreferrer"/>
+            <a href="https://github.com/jhanccr" target="_blank" rel="nooperner noreferrer">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
                 class="bi bi-github card__footer-nav-img" viewBox="0 0 16 16">
                 <path
@@ -136,7 +136,7 @@
             </a>
           </li>
           <li class="card__footer-nav-item">
-            <a href="https://www.linkedin.com/in/jhan-carlos-caicedo-reluz-70266016b/" target="_blank" rel="nooperner noreferrer" />
+            <a href="https://www.linkedin.com/in/jhan-carlos-caicedo-reluz-70266016b/" target="_blank" rel="nooperner noreferrer">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
                 class="bi bi-linkedin card__footer-nav-img" viewBox="0 0 16 16">
                 <path
@@ -145,7 +145,7 @@
             </a>
           </li>
           <li class="card__footer-nav-item">
-            <a href="https://www.instagram.com/jhancaicedoreluz/" target="_blank" rel="nooperner noreferrer"/>
+            <a href="https://www.instagram.com/jhancaicedoreluz/" target="_blank" rel="nooperner noreferrer">
               <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
                 class="bi bi-instagram card__footer-nav-img" viewBox="0 0 16 16">
                 <path
